<resources>
    <string name="app_name">Image Filter</string>
    <string name="lesson_five_startup_toast">Tap the screen to switch between blended and normal mode.</string>
    <string name="lesson_six_set_min_filter">Set min. filter</string>
    <string name="lesson_six_set_mag_filter">Set mag. filter</string>
    <string name="lesson_six_set_min_filter_message">Set GL_TEXTURE_MIN_FILTER</string>
    <string name="lesson_six_set_mag_filter_message">Set GL_TEXTURE_MAG_FILTER</string>
    <string-array name="lesson_six_min_filter_types">
        <item>GL_NEAREST</item>
        <item>GL_LINEAR</item>
        <item>GL_NEAREST_MIPMAP_NEAREST</item>
        <item>GL_NEAREST_MIPMAP_LINEAR</item>
        <item>GL_LINEAR_MIPMAP_NEAREST</item>
        <item>GL_LINEAR_MIPMAP_LINEAR</item>
    </string-array>
    <string-array name="lesson_six_mag_filter_types">
        <item>GL_NEAREST</item>
        <item>GL_LINEAR</item>
    </string-array>
    <string name="lesson_seven_increase_cube_count">Increase cube count</string>
    <string name="lesson_seven_decrease_cube_count">Decrease cube count</string>
    <string name="lesson_seven_using_VBOs">Using VBOs</string>
    <string name="lesson_seven_not_using_VBOs">Not using VBOs</string>
    <string name="lesson_seven_using_stride">Using stride</string>
    <string name="lesson_seven_not_using_stride">Not using stride</string>
    <string name="lesson_eight_error_could_not_create_vbo">Could not create vertex buffer object: %s</string>
    <string name="lesson_eight_error_unknown">Unknown error: %s</string>

    <string name="jayway_tutorial">Jayway Tutorial</string>
    <string name="reinier_tutorial">Reinier Tutorial</string>
    <string name="lesson_one">Lesson 1</string>
    <string name="lesson_two">Lesson 2</string>
    <string name="lesson_three">Lesson 3</string>
    <string name="lesson_four">Lesson 4</string>
    <string name="lesson_five">Lesson 5</string>
    <string name="lesson_six">Lesson 6</string>
    <string name="lesson_seven">Lesson 7</string>
    <string name="lesson_eight">Lesson 8</string>
</resources>
